--- a/lurvberry/bin/AndroidManifest.xml
+++ b/lurvberry/bin/AndroidManifest.xml
@@ -8,12 +8,22 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-
+	<uses-permission 
+	    android:name="android.permission.READ_PHONE_STATE" >
+    </uses-permission>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+		<receiver android:name=".CallReceiver" >
+	    	<intent-filter>
+	        	<action android:name="android.intent.action.PHONE_STATE" />
+	       	</intent-filter>
+	   	</receiver>
+        
         <activity
             android:name="com.example.lurvberry.MainActivity"
             android:label="@string/app_name" >
